--- a/src/main/resources/html/TZClueCommonBundle/TZ_CLUE_COMMON_HTML.html
+++ b/src/main/resources/html/TZClueCommonBundle/TZ_CLUE_COMMON_HTML.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="x-ua-compatible" content="IE=edge">
-		<title>在线咨询</title>
+		<title>咨询报名</title>
 		<script type="text/javascript">
 			var TzUniversityContextPath = "";
 		</script>
@@ -84,9 +84,9 @@
 					name="signupForm" id="signupForm">
 					<div class="main_full_top"></div>
 					<div class="main_full">
-						<div class="main_full_line" style="height:4rem;tetx-align:center;">
-							<div class="main_full_line_title" style="color:%bind(:3);">在线咨询</div>
-							<div class="main_full_line_title" style="color:%bind(:3);">%bind(:4)</div>
+						<div class="main_full_line" style="height:2rem;tetx-align:center;">
+							<div class="main_full_line_title" style="color:%bind(:3);">咨询报名</div>
+							<!-- <div class="main_full_line_title" style="color:%bind(:3);">%bind(:4)</div> -->
 						</div>
 						<div class="main_full_lines"></div>
 						<div class="search_icodiv">
@@ -256,7 +256,7 @@
 						<div class="main_full_lines"></div>
 						<div class="main_full_line" style="tetx-align:center;">
 							
-							<input id="sub" type="button" style="border-radius:0.667rem;background-color:%bind(:3) !important;color:#FFF;height:3rem;line-height:2rem;width:30%;" class="btn-i" value="提交申请">
+							<input id="sub" type="button" style="border-radius:0.667rem;background-color:%bind(:3) !important;color:#FFF;height:3rem;line-height:2rem;width:25%;" class="btn-i" value="提交">
 						</div>
 					</div>
 					<div class="main_full_foot">
