--- a/src/main/resources/html/TZEventsSignInBundle/TZ_PHONE_ACTSIGN_HTML.html
+++ b/src/main/resources/html/TZEventsSignInBundle/TZ_PHONE_ACTSIGN_HTML.html
@@ -32,6 +32,7 @@
 	  	<div class="mini" style="height:100%;">
 			<div class="btlist"><a href="javascript:wxScanQRCode();"><img src="%bind(:1)/statics/js/hdqd/images/ico1.png" width="22" height="22"  alt=""/>扫码签到</a></div>
 	        <div class="btlist"><a href="javascript:goToUrl('%bind(:4)');"><img src="%bind(:1)/statics/js/hdqd/images/ico2.png" width="22" height="22"  alt=""/>签到码签到</a></div>
+	        <div class="btlist"><a href="javascript:goToUrl('%bind(:11)');"><img src="%bind(:1)/statics/js/hdqd/images/ico2.png" width="22" height="22"  alt=""/>手机签到</a></div>
 	        <div class="btlist"><a href="javascript:goToUrl('%bind(:5)');"><img src="%bind(:1)/statics/js/hdqd/images/ico3.png" width="22" height="22"  alt=""/>活动管理</a></div>
 	    </div>
 	</div>	
