--- a/src/main/resources/html/TZApplicationTemplateBundle/TZ_TEMPLATE_HTML.html
+++ b/src/main/resources/html/TZApplicationTemplateBundle/TZ_TEMPLATE_HTML.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="utf-8">
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 		
