多选框控件修改

--- a/src/main/resources/html/TZApplicationTemplateBundle/TZ_ONLINE_VIEW_HTML.html
+++ b/src/main/resources/html/TZApplicationTemplateBundle/TZ_ONLINE_VIEW_HTML.html
@@ -12,7 +12,8 @@
 		<link rel="stylesheet" href="%bind(:1)/statics/js/lib/fancyBox/jquery.fancybox-thumbs.css" type="text/css" />
 		<link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/registration-public.css" type="text/css"/>
 		<link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/registration-%bind(:21)page.css" type="text/css"/>
-
+		<!--引入多选框的分列的样式  张超 时间：2019年12月19日15:49:18 -->
+		<link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/home.css" />
 		<script type="text/javascript">
 			var TzUniversityContextPath = "%bind(:1)";
 		</script>
