--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -16,6 +16,8 @@
 	<link rel="stylesheet" href="%bind(:32)/statics/js/lib/formvalidator/themes/Default/style/style.css" />
 	<link rel="stylesheet" href="%bind(:32)/statics/css/appeditor/registration-public.css" type="text/css" />
 	<link rel="stylesheet" href="%bind(:32)/statics/css/appeditor/registration-%bind(:55)page.css" type="text/css" />
+	<!--引入多选框的分列的样式  张超 时间：2019年12月19日15:49:18 -->
+	<link rel="stylesheet" href="%bind(:32)/statics/css/appeditor/home.css" />
 	<style>
 		.input-list-info,.input-list-info-blank{%bind(:33)}
 		.input-list-text{%bind(:34)}
