报名表控件样式修改

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/m/LCalendar.css" type="text/css" />
 <link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/m/rest.css" type="text/css" />
 <link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/m/swiper.min.css" type="text/css" />
+	<link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/registration_page_zc.css" type="text/css" />
 <script type="text/javascript">
 		var TzUniversityContextPath = "%bind(:1)";
 </script>
